# booty

./: .bumpversion.cfg  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.binary  Dockerfile.naddeoa  LICENSE  Makefile  README.md  TODO.md  index.html  install.booty  install.makefile  pyproject.toml
.github/workflows/: release.yaml  workflow.yaml
booty/: app.py  ast_util.py  cli.py  dependencies.py  execute.py  graph.py  main.py  parser.py  target_logger.py  types.py  ui.py  validation.py
booty/lang/: __init__.py  grammar.lark  grammar.py  stdlib.booty  stdlib.py
examples/: always_reinstalls.booty  failures.booty  install.booty  success.booty
experiments/: README.md  a.yaml  examples.sysc  haskel_like.hk
scripts/: booty-download-linux.sh  booty-download-mac-universal.sh  booty-download-mac-x86.sh
systemconf/: app.py  ast_util.py  cli.py  dependencies.py  execute.py  grammar.lark  main.py  parser.py  types.py  validation.py
tests/booty/: test_app.py  test_graph.py
tests/systemconf/: test_query.py
