[tool.poetry]
name = "systemconf"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony.naddeo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.8"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.338"
black = "^23.11.0"
autoflake = "^2.2.1"
ruff = "^0.1.7"
pytest = "^7.4.3"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false
stubPath = "./stubs"


[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
