[tool.poetry]
name = "booty-cli"
version = "1.0.4-dev1"
description = ""
authors = ["Anthony Naddeo <anthony.naddeo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "booty/**/*.py" }]


[tool.poetry.scripts]
booty = "booty.cli:cli"


[tool.poetry.dependencies]
python = ">=3.9, <3.13"
lark = "^1.1.8"
networkx = "^3.2.1"
click = "^8.1.7"
pytermgui = "^7.7.0"
progress-table = "^0.1.27"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.338"
black = "^23.11.0"
autoflake = "^2.2.1"
ruff = "^0.1.7"
pytest = "^7.4.3"
debugpy = "^1.8.0"
pyinstaller = "^6.3.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
