[tool.poetry]
name = "booty-cli"
version = "1.0.14"
description = "A language and command line utility for bootstrapping the setup of personal OS installs."
homepage = "https://github.com/naddeoa/booty"
repository = "https://github.com/naddeoa/booty"
keywords = ["bootstrap", "booty", "setup", "cli", "tool"]
authors = ["Anthony Naddeo <anthony.naddeo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "booty/**/*.py"},
    { include = "booty/**/*.lark"},
    { include = "booty/**/*.booty"}
]

[tool.poetry.scripts]
booty = "booty.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
lark = "^1.1.8"
click = "^8.1.7"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.338"
ruff = "^0.1.7"
pytest = "^7.4.3"
debugpy = "^1.8.0"
pyinstaller = "^6.3.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
